@@ -1,3 +1,10 @@
+2005-12-01  Murray Cumming <murrayc@murrayc.com
+
+	* examples/book/drawingarea/myarea.cc: 
+	on_expose_event(): Port to cairo instead of 
+	draw*(), though the Color and GC part should 
+	probably be ported too.
+
 2005-12-01  Murray Cumming <murrayc@murrayc.com>
 
 	* configure.in: Depend on cairomm.
